[package]
name = "pmd_wan"
version = "1.1.0"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"
description = "A library that can read wan file, a sprite format used in pokemon mystery dungeon games"
repository = "https://github.com/marius851000/pmd_wan"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
log = "0.4.8"
