[package]
name = "export_shiren_fragment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmd_wan = { path = "../pmd_wan" }
clap = { version = "3.1.0", features = ["derive"] }
env_logger = "0.9.0"
spritebot_storage = "0.1.0"
vfs = "0.10.0"