[package]
name = "export_shiren_sprite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmd_wan = { path = "../pmd_wan" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.0"
spritebot_storage = "0.3.0"
vfs = "0.12.0"
image = "0.25.0"