[package]
name = "pmd_wan"
version = "5.1.0"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"
description = "A library that can read wan file, a sprite format used in pokemon mystery dungeon games"
repository = "https://github.com/marius851000/pmd_wan"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version="0.24.0", default-features = false }
log = "0.4.14"
thiserror = "1.0.28"
byteorder = "1.4.2"
binread = "2.2.0"
binwrite = "0.2.1"
pmd_sir0 = "1.2.2"
anyhow = "1.0.48"

[dev-dependencies]
criterion = "0.3"
image = "0.24.2"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "find_fragment"
harness = false
