[package]
name = "pmd_wan"
version = "6.0.0"
authors = ["marius851000 <crates@mariusdavid.fr>"]
edition = "2021"
description = "A library that can read wan file, a sprite format used in pokemon mystery dungeon games"
repository = "https://github.com/marius851000/pmd_wan"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version="0.25.0", default-features = false }
log = "0.4.14"
thiserror = "2.0.0"
byteorder = "1.4.2"
binread = "2.2.0"
binwrite = "0.2.1"
pmd_sir0 = "1.2.2"
anyhow = "1.0.48"
arr_macro = "0.2.1"
num-traits = "0.2.18"

[features]
image = []
shiren_experimental = []

[dev-dependencies]
criterion = "0.5"
image = "0.25.0"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "find_fragment"
harness = false
