[package]
name = "test_on_all_shiren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmd_wan = { path = "../pmd_wan", features = [ "shiren_experimental" ] }
clap = { version = "3.1.0", features = ["derive"] }
env_logger = "0.9.0"