[package]
name = "test_read_write"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmd_wan = { path = "../pmd_wan" }
pmd_cpack = "1.0.0"
pmd_pkdpx = "1.1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25.0", default-features = false }
env_logger = "0.11.0"
